security/vault/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-internal-ingress
  namespace: vault
  labels:
    ingress: cilium
    app: vault
  annotations:
    lbipam.cilium.io/ips: 10.140.79.12
    ingress.cilium.io/loadbalancer-mode: dedicated
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - vault.inspection.alpha.canada.ca
    secretName: vault-tls
  rules:
    - host: vault.inspection.alpha.canada.ca
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: vault-ui
              port:
                name: http
